# myagent

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
config/: coverage.ini
docs/reference/: cli.md
myagent/myagent/: __init__.py  __main__.py  agent.py  cli.py
tests/: __init__.py  test_cli.py
