[tool.poetry]
name = "myagent"
version = "0.1.0"
description = "My agent"
authors = ["Mark Bono <m@m.com>"]
license = "Academic Free License v3.0"
readme = "README.md"
repository = "https://github.com/bonicim/myagent"
homepage = "https://github.com/bonicim/myagent"
keywords = []
packages = [ { include = "myagent", from = "myagent" } ]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.26.0"
# volttron = "^0.1.0"

[tool.poetry.dev-dependencies]
# formatting, quality, tests
pytest = "^6.2.5"
mock = "^4.0.3"
pre-commit = "^2.17.0"
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.yapfignore]
ignore_patterns = [
    ".venv/**",
    ".pytest_cache/**",
    "dist/**",
    "docs/**"
]

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 99
split_before_logical_operator = true

# tasks
duty = ">=0.6.0"
git-changelog = ">=0.5.0"
httpx = ">=0.16.1"
jinja2-cli = ">=0.7.0"
toml = ">=0.10.2"


# docs
mkdocs = ">=1.2.2"
mkdocs-coverage = ">=0.2.1"
mkdocs-macros-plugin = ">=0.5.0"
mkdocs-material = ">=6.2.7"
mkdocstrings = ">=0.16.2"

[tool.poetry.scripts]
myagent = "myagent.agent:main"
